[gd_scene load_steps=4 format=2]

[ext_resource path="res://Campaign.gd" type="Script" id=1]
[ext_resource path="res://font-sourcecode-16.tres" type="DynamicFont" id=2]
[ext_resource path="res://dynamicfont-sourcecode.tres" type="DynamicFont" id=3]

[node name="Campaign" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.235294, 0.239216, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 302.0
margin_top = 10.0
margin_right = 722.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "Hauling Grass Campaign"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCampaignMenu" type="Node2D" parent="."]
visible = false

[node name="NewCampaignLabel" type="Label" parent="NewCampaignMenu"]
margin_left = 452.0
margin_top = 150.0
margin_right = 572.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 2 )
text = "New Campaign"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="NewCampaignMenu"]
margin_left = 280.0
margin_top = 200.0
margin_right = 400.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 2 )
text = "Name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEntry" type="TextEdit" parent="NewCampaignMenu"]
margin_left = 412.0
margin_top = 200.0
margin_right = 612.0
margin_bottom = 230.0
text = "Mower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameSubmitButton" type="Button" parent="NewCampaignMenu"]
margin_left = 650.0
margin_top = 200.0
margin_right = 725.0
margin_bottom = 230.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelToMainMenuButton" type="Button" parent="NewCampaignMenu"]
margin_left = 474.0
margin_top = 500.0
margin_right = 549.0
margin_bottom = 530.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CampaignUI" type="Node2D" parent="."]

[node name="NameLabel" type="Label" parent="CampaignUI"]
margin_left = 150.0
margin_top = 100.0
margin_right = 350.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 2 )
text = "Name: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExperienceLabel" type="Label" parent="CampaignUI"]
margin_left = 150.0
margin_top = 150.0
margin_right = 350.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 2 )
text = "Experience: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="CampaignUI"]
margin_left = 150.0
margin_top = 200.0
margin_right = 350.0
margin_bottom = 221.0
custom_fonts/font = ExtResource( 2 )
text = "Money: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MowerHealthLabel" type="Label" parent="CampaignUI"]
margin_left = 150.0
margin_top = 250.0
margin_right = 350.0
margin_bottom = 271.0
custom_fonts/font = ExtResource( 2 )
text = "Mower Health: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAndQuitButton" type="Button" parent="CampaignUI"]
margin_left = 462.0
margin_top = 500.0
margin_right = 562.0
margin_bottom = 530.0
text = "Save & Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepairMowerButton" type="Button" parent="CampaignUI"]
margin_left = 750.0
margin_top = 100.0
margin_right = 870.0
margin_bottom = 130.0
text = "Repair Mower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MowLawnButton" type="Button" parent="CampaignUI"]
margin_left = 750.0
margin_top = 200.0
margin_right = 870.0
margin_bottom = 230.0
text = "Mow Lawn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPicker" type="Control" parent="."]
visible = false
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 548.0

[node name="CenterContainer" type="CenterContainer" parent="LevelPicker"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelButtons" type="GridContainer" parent="LevelPicker/CenterContainer"]
margin_left = 392.0
margin_top = 234.0
margin_right = 392.0
margin_bottom = 234.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 3

[node name="CloseLevelPickerButton" type="Button" parent="LevelPicker"]
margin_left = 360.0
margin_top = 430.0
margin_right = 440.0
margin_bottom = 460.0
text = "Cancel"
[connection signal="pressed" from="NewCampaignMenu/NameSubmitButton" to="." method="_on_NameSubmitButton_pressed"]
[connection signal="pressed" from="NewCampaignMenu/CancelToMainMenuButton" to="." method="_on_CancelToMainMenuButton_pressed"]
[connection signal="pressed" from="CampaignUI/SaveAndQuitButton" to="." method="_on_SaveAndQuitButton_pressed"]
[connection signal="pressed" from="CampaignUI/RepairMowerButton" to="." method="_on_RepairMowerButton_pressed"]
[connection signal="pressed" from="CampaignUI/MowLawnButton" to="." method="_on_MowLawnButton_pressed"]
[connection signal="pressed" from="LevelPicker/CloseLevelPickerButton" to="." method="_on_CloseLevelPickerButton_pressed"]
